# preloader-android

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
src/pl/: PreLoader.cpp
src/pl/api/: Macro.h  Types.h
src/pl/api/memory/: Hook.h
src/pl/c/: Hook.h  Macro.h  Mod.h  Patch.h  PreloaderInput.h  PreloaderModMenu.h  Signature.h  Types.h
src/pl/cpp/: Config.hpp  Hook.hpp  Mod.hpp  ModMenu.hpp  Patch.hpp  PreloaderInput.hpp  Signature.hpp  Types.hpp
src/pl/cpp/mod/: Mod.hpp  NativeMod.hpp  RegisterHelper.hpp
src/pl/internal/: ModManager.cpp  ModManager.h
src/pl/memory/: Hook.cpp  Patch.cpp  Signature.cpp
src/pl/runtime/: InputBridge.cpp  InputBridge.h  JavaRuntime.cpp  JavaRuntime.h  ModMenuBridge.cpp  ModMenuBridge.h
